--- a/servicio-correo/package.json
+++ b/servicio-correo/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@hono/node-server": "^1.14.1",
     "chanfana": "^2.8.0",
+    "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
     "hono": "^4.7.10",
     "nodemailer": "^7.0.3",
