--- a/servicio-correo/package.json
+++ b/servicio-correo/package.json
@@ -17,6 +17,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
     "hono": "^4.7.10",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.3",
     "zod": "^3.24.4"
   }
