--- a/cliente-donaciones/package.json
+++ b/cliente-donaciones/package.json
@@ -10,9 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.7",
+    "intl-tel-input": "^25.3.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "wouter": "^3.7.0"
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
+    "tailwindcss": "^4.1.7",
+    "wouter": "^3.7.0",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
