--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,21 @@
 venv
 __pycache__
+
+# Node.js dependencies
+node_modules/
+
+# Build output
+dist/
+build/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Optional:
+.env
+.DS_Store
+
+#vscode
+.vscode/
